--- a/user-module/src/main/resources/application.yml
+++ b/user-module/src/main/resources/application.yml
@@ -52,7 +52,7 @@ spring:
 mybatis:
   mapper-locations: classpath:mybatis/mapper/*.xml
   config-location: classpath:mybatis/mybatis-config.xml
-  type-aliases-package: top.godder.userapi.entry
+  type-aliases-package: top.godder.usermodule.domain.entity
 
 security:
   user:
