--- a/user-module/pom.xml
+++ b/user-module/pom.xml
@@ -114,6 +114,11 @@
             <version>1.0.0</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>top.godder</groupId>
+            <artifactId>user-module-api</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
