use module DAO finish

--- a/infrastructure-common/pom.xml
+++ b/infrastructure-common/pom.xml
@@ -152,6 +152,10 @@
             <artifactId>spring-cloud-starter-eureka</artifactId>
             <version>1.4.0.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-netflix-eureka-client</artifactId>
+        </dependency>
         <!--@Getter and @Setter-->
         <dependency>
             <groupId>org.projectlombok</groupId>
