--- a/eureka-module/src/main/resources/application.yml
+++ b/eureka-module/src/main/resources/application.yml
@@ -6,17 +6,17 @@ eureka:
   instance:
     hostname: localhost
   client:
-    registerWithEureka: false
-    fetchRegistry: false
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+    register-with-eureka: false
+    fetch-registry: false
 spring:
   application:
     name: eureka-service
 
 security:
   basic:
-    enabled: true
+    enabled: false
   user:
     name: godder
     password: godder
