--- a/data-module/pom.xml
+++ b/data-module/pom.xml
@@ -33,6 +33,11 @@
             <artifactId>spring-security-jwt</artifactId>
         </dependency>
         <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
@@ -94,6 +99,18 @@
         <dependency>
             <groupId>top.godder</groupId>
             <artifactId>infrastructure-common</artifactId>
+            <version>1.0.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>top.godder</groupId>
+            <artifactId>data-module-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>top.godder</groupId>
+            <artifactId>user-module-api</artifactId>
             <version>1.0.0</version>
             <scope>compile</scope>
         </dependency>
