--- a/data-module/src/main/resources/application.yml
+++ b/data-module/src/main/resources/application.yml
@@ -59,4 +59,4 @@ security:
 jwt:
   secret: godder
   token_prefix: datasharing
-  expriation_time: 7 * 24 * 60 * 60 * 1000
+#  expriation_time: 604800000
