--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>eureka-module</module>
         <module>user-module-api</module>
         <module>user-module</module>
+        <module>web-module</module>
     </modules>
 
     <!--配置管理，用来控制子项目配置的缺省配置版本-->
